examples/should-fail/f40_impred_predicative_leak_type.lean
def demo4_bad_predicative_leak_type : Type :=
  (A : Type) -> Prop
